[gd_scene load_steps=2 format=3 uid="uid://mnj4vx3iqso"]

[ext_resource type="Script" uid="uid://dnicrmcf717hd" path="res://scenes/actions_menu.gd" id="1_x7b7v"]

[node name="MarginContainer" type="MarginContainer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 400
theme_override_constants/margin_top = 300
theme_override_constants/margin_right = 400
theme_override_constants/margin_bottom = 300
script = ExtResource("1_x7b7v")

[node name="Control" type="Control" parent="."]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.247059, 0.247059, 0.247059, 0.686275)

[node name="MarginContainer" type="MarginContainer" parent="Control/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="Control/ColorRect/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Ver" type="Button" parent="Control/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "ver"
alignment = 0

[node name="Guardar" type="Button" parent="Control/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "guardar"
alignment = 0

[node name="Usar" type="Button" parent="Control/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "usar con
"
alignment = 0

[connection signal="pressed" from="Control/ColorRect/MarginContainer/VBoxContainer/Ver" to="." method="_on_ver_pressed"]
[connection signal="pressed" from="Control/ColorRect/MarginContainer/VBoxContainer/Guardar" to="." method="_on_guardar_pressed"]
[connection signal="pressed" from="Control/ColorRect/MarginContainer/VBoxContainer/Usar" to="." method="_on_usar_pressed"]
